added some responsivnes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="big-nav">
         <ul>
           <a href="#"><li class="list1">Home</li></a>
-          <a href="#imageOfMe"><li class="list2">About Me</li></a>
+          <a href="#bio"><li class="list2">About Me</li></a>
           <a href="#"><li class="list3">Contact</li></a>          
         </ul>
       </div>                 
@@ -51,8 +51,9 @@
       <a href="https://css-tricks.com/" target="_blank"><img src="./res/732007.png" alt="css-icon" class="css-icon"></a>
       <a href="https://reactjs.org/" target="_blank"><img src="./res/react.png" alt="react-icon" class="react-icon"></a>
     </div> 
-    <section class="aboutMe">
-      <div class="bio">
+    <section class="aboutMe" id="bio">
+      <div class="bio-card">
+        <div class="bio">
         <p>
           Hey guys. My name is Adrian. I'm age of 30 and currently living in Liverpool, UK. 
           I like to create and design stuff on the internet. 
@@ -62,9 +63,12 @@
         <p> 
           During the project I quickly realised that website builders come with limitations and lack of costumisation and would not satisfy my needs.
           At that time I decided to dive into basics of HTML and CSS and from there it just took off.
-        </p>             
+        </p>                 
       </div>
-      <img src="./res/18767891_1699828510044714_5038670049750591134_n.jpg" alt="" class="imageOfMe" id="imageOfMe"> 
+        <img src="./res/18767891_1699828510044714_5038670049750591134_n.jpg" alt="" class="imageOfMe" id="imageOfMe">
+      </div>
+      
+       
     </section>        
   </main>
 </body>
