added some responsivness

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   <script src="./intersectionObserver.js" defer></script>
+  <script src="./dropdownMenu.js" defer></script>
   <link rel="icon" type="image/x-icon" href="./res/logoTransparent.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <header>
     <nav>
       <a href="#"><img src="./res/logoTransparent.png" alt="logoTransparent" class="logoTransparent"> </a>
-      <div class="big-nav">
-        <ul>
-          <a href="#"><li class="list1">Home</li></a>
-          <a href="#bio"><li class="list2">About Me</li></a>
-          <a href="#"><li class="list3">Contact</li></a>          
-        </ul>
-      </div>                 
-    </nav>   
+      <ul>
+        <a href="#"><li class="list1">Home</li></a>
+        <a href="#bio"><li class="list2">About Me</li></a>
+        <a href="#"><li class="list3">Contact</li></a>          
+      </ul>                 
+    </nav> 
   </header>
   <main>
     <section class="intro">
