added footer and minor fixes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul>
         <li class="menu-item"><a href="#">Home</a></li>
         <li class="menu-item"><a href="#bio">About Me</a></li>
-        <li class="menu-item"><a href="#">Contact</a></li>         
+        <li class="menu-item"><a href="#footer">Contact</a></li>         
       </ul>                 
     </nav> 
   </header>
@@ -75,5 +75,10 @@
       </div> 
     </section>        
   </main>
+  <footer>
+    <section class="footer" id="footer">
+      <p class="footer-text">Designed & built by Adrian Wojcik</p>
+    </section>
+  </footer>
 </body>
 </html>
