added email section

--- a/index.html
+++ b/index.html
@@ -73,10 +73,15 @@
       </div>
         <img src="./res/18767891_1699828510044714_5038670049750591134_n.jpg" alt="" class="imageOfMe" id="imageOfMe">
       </div> 
-    </section>        
+    </section>
+    <section class="contact-me">
+      <div class="email-card">
+        <p>adwoj92@gmail.com</p>
+      </div>
+    </section>       
   </main>
   <footer>
-    <section class="footer" id="footer">
+    <section class="footer" id="footer">  
       <p class="footer-text">Designed & built by Adrian Wojcik</p>
     </section>
   </footer>
